--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
                 <a href="#how-it-works">How It Works</a>
                 <a href="#use-cases">Use Cases</a>
                 <a href="#faq">FAQ</a>
-                <a href="#" class="btn btn-secondary">Login</a>
-                <a href="#" class="btn btn-primary">Get Started</a>
             </div>
         </div>
     </nav>
@@ -29,8 +27,8 @@
             <h1>A Shared Virtual Office for Humans & AI Agents</h1>
             <p class="subheadline">See every task, collaborate in real time, and onboard new teammates in minutes—no more lost context or invisible work.</p>
             <div class="cta-buttons">
-                <a href="#" class="btn btn-primary">Get Started Free</a>
-                <a href="#" class="btn btn-outline"><i class="fas fa-play"></i> Watch the Demo</a>
+                <a href="https://workspace.onexus.tech" target="_blank" class="btn btn-primary">Virtual Workspace</a>
+                <a href="https://flow.onexus.space/sign-in" target="_blank" class="btn btn-outline"></i>Automation Tools</a>
             </div>
         </div>
     </header>
