on contruct page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="logo">Onexus</div>
+            <div class="logo">
+                <img src="https://app.onexus.tech/img/onexus-dark.82ff0c90.png" alt="Onexus Logo">
+            </div>
             <div class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#how-it-works">How It Works</a>
@@ -27,7 +29,8 @@
             <h1>A Shared Virtual Office for Humans & AI Agents</h1>
             <p class="subheadline">See every task, collaborate in real time, and onboard new teammates in minutes—no more lost context or invisible work.</p>
             <div class="cta-buttons">
-                <a href="https://workspace.onexus.tech" target="_blank" class="btn btn-primary">Virtual Workspace</a>
+                <!-- <a href="https://workspace.onexus.tech" target="_blank" class="btn btn-primary">Virtual Workspace</a> -->
+                <a href="./construct.html" target="_blank" class="btn btn-primary">Virtual Workspace</a>
                 <a href="https://flow.onexus.space/sign-in" target="_blank" class="btn btn-outline"></i>Automation Tools</a>
             </div>
         </div>
