--- a/construct.html
+++ b/construct.html
@@ -117,7 +117,7 @@
     <div class="construction-container">
         <div class="icon">🚧</div>
         <h1>We're improving a few things</h1>
-        <p>This page will return this Saturday, so stay tuned!</p>
+        <p>The Virtual Workspace will return this Saturday, so stay tuned!</p>
     </div>
 
     <script>
