changer le message construction

--- a/construct.html
+++ b/construct.html
@@ -116,7 +116,7 @@
     <div class="particles" id="particles"></div>
     <div class="construction-container">
         <div class="icon">🚧</div>
-        <h1>We're improving few things</h1>
+        <h1>We're improving some points</h1>
         <p>The Virtual Workspace will return this Saturday, so stay tuned!</p>
     </div>
 
