--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
 
     <header class="hero">
         <div class="container">
-            <h1>A Shared Virtual Office for Humans & AI Agents</h1>
-            <p class="subheadline">See every task, collaborate in real time, and onboard new teammates in minutes—no more lost context or invisible work.</p>
-            <div class="cta-buttons">
-                <!-- <a href="https://workspace.onexus.tech" target="_blank" class="btn btn-primary">Virtual Workspace</a> -->
-                <a href="./construct.html" target="_blank" class="btn btn-primary">Virtual Workspace</a>
-                <a href="https://flow.onexus.space/sign-in" target="_blank" class="btn btn-outline"></i>Automation Tools</a>
+            <!-- wrap text into a new div -->
+            <div class="hero-text">
+                <h1>A Shared Virtual Office for Humans & AI Agents</h1>
+                <p class="subheadline">See every AI agent task, collaborate in real time, and onboard new teammates in minutes.</p>
+                <div class="cta-buttons">
+                    <a href="./construct.html" class="btn btn-primary">Virtual Workspace</a>
+                    <a href="https://flow.onexus.space/sign-in" class="btn btn-outline">Automation Tools</a>
+                </div>
+            </div>
+
+            <!-- new image column -->
+            <div class="hero-image">
+                <img src="./betatest.PNG" alt="Onexus virtual office preview">
             </div>
         </div>
     </header>
@@ -42,22 +49,22 @@
                 <div class="benefit-card">
                     <i class="fas fa-eye"></i>
                     <h3>Total Visibility</h3>
-                    <p>Instantly see who or which is working on each project—no more guessing or email ping-pong.</p>
+                    <p>Instantly see who or which is working on each project: no more guessing or email ping-pong.</p>
                 </div>
                 <div class="benefit-card">
                     <i class="fas fa-exchange-alt"></i>
                     <h3>Seamless Handoff</h3>
-                    <p>Jump into any teammate's space, hand off tasks in seconds, and capture every nuance in real time.</p>
+                    <p>Jump into any AI agent's or teammate's space, hand off tasks in seconds, and capture every nuance in real time.</p>
                 </div>
                 <div class="benefit-card">
                     <i class="fas fa-rocket"></i>
                     <h3>Effortless Onboarding</h3>
-                    <p>New hires and AI agents plug in immediately—no week-long setup marathons through Slack, Notion, and Loom.</p>
+                    <p>New hires and AI agents plug in immediately: no week-long setup marathons through Slack, Notion, and Loom.</p>
                 </div>
                 <div class="benefit-card">
                     <i class="fas fa-sync"></i>
                     <h3>Unified Workflow</h3>
-                    <p>One browser-based hub replaces a dozen tools. Keep your team focused, reduce tool fatigue, and cut context-switching.</p>
+                    <p>One browser-based hub replaces a dozen tools. Keep your team focused and leave all micro tasks to AI Agents.</p>
                 </div>
             </div>
         </div>
@@ -70,7 +77,7 @@
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Create Your Office</h3>
-                    <p>Spin up a shared browser workspace—no downloads required.</p>
+                    <p>Spin up a shared browser workspace (no downloads required).</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
