--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- wrap text into a new div -->
             <div class="hero-text">
                 <h1>A Shared Virtual Office for Humans & AI Agents</h1>
-                <p class="subheadline">See every AI agent task, collaborate in real time, and onboard new teammates in minutes.</p>
+                <p class="subheadline">See every AI agents tasks, collaborate in real time, and onboard new teammates in minutes.</p>
                 <div class="cta-buttons">
                     <a href="./construct.html" class="btn btn-primary">Virtual Workspace</a>
                     <a href="https://flow.onexus.space/sign-in" class="btn btn-outline">Automation Tools</a>
@@ -38,7 +38,7 @@
 
             <!-- new image column -->
             <div class="hero-image">
-                <img src="./betatest.PNG" alt="Onexus virtual office preview">
+                <img src="./img/betatest.png" alt="Onexus virtual office preview">
             </div>
         </div>
     </header>
